--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
-    "name": "false",
-    "displayName": "false",
-    "description": "FALSE",
-    "publisher": "MixusMinimax",
-    "version": "0.0.1",
-    "engines": {
-        "vscode": "^1.64.0"
-    },
-    "categories": [
-        "Programming Languages"
-    ],
-    "contributes": {
-        "languages": [{
-            "id": "false",
-            "aliases": ["FALSE", "false"],
-            "extensions": [".f",".false",".F",".FALSE"],
-            "configuration": "./language-configuration.json"
-        }],
-        "grammars": [{
-            "language": "false",
-            "scopeName": "source.f",
-            "path": "./syntaxes/false.tmLanguage.json"
-        }]
-    },
-    "repository": "MixusMinimax/falseVsCode"
+	"name": "false",
+	"displayName": "false",
+	"description": "FALSE",
+	"publisher": "MixusMinimax",
+	"version": "0.0.2",
+	"engines": {
+		"vscode": "^1.64.0"
+	},
+	"categories": [
+		"Programming Languages"
+	],
+	"contributes": {
+		"languages": [
+			{
+				"id": "false",
+				"aliases": [
+					"FALSE",
+					"false"
+				],
+				"extensions": [
+					".f",
+					".false",
+					".F",
+					".FALSE"
+				],
+				"configuration": "./language-configuration.json"
+			}
+		],
+		"grammars": [
+			{
+				"language": "false",
+				"scopeName": "source.f",
+				"path": "./syntaxes/false.tmLanguage.json"
+			}
+		]
+	},
+	"repository": "MixusMinimax/falseVsCode",
+	"__metadata": {
+		"id": "64766b89-0835-41b4-a5f2-f90a1e75c825",
+		"publisherDisplayName": "MixusMinimax",
+		"publisherId": "978468f2-71c0-439a-92f8-0f02d0565331",
+		"isPreReleaseVersion": false
+	},
+	"icon": "images/false_icon.png"
 }
